--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Cras justo odio</li>
-                      <li class="list-group-item">Dapibus ac facilisis in</li>
-                      <li class="list-group-item">Vestibulum at eros</li>
+                      <li class="list-group-item">Vestidos cortos Elegantes</li>
+                      <li class="list-group-item">Vestidos largos Elegantes</li>
+                      <li class="list-group-item">Vestidos casuales</li>
                     </ul>
                   </div>
             </div>
