--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </header>
     
 
-    <section class="main container-fluid">
+    <section class="main container">
 
         <div class="row">
 
-            <div class="col-4">
+            <div class="col">
                 <div class="card" style="width: 18rem;">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item">Vestidos cortos Elegantes</li>
@@ -57,7 +57,7 @@
                   </div>
             </div>
 
-            <div class="col-4">
+            <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
@@ -77,7 +77,7 @@
 
             </div>
 
-            <div class="col-4">
+            <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
