--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     </section>
 
     <footer>
-        <section class="container-fluid" id="contenedor-inferior">
-            <div class="row justify-content-center">
+        <section class="container-fluid-sm" id="contenedor-inferior">
+            <div class="col-md-12 justify-content mb-3">
                 <h1>Siguenos en:
                 <i>
                     <a href="">
