--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
             </div>
     </main>
-    <hr>
-    <footer class="container py-5">
-        <div class="row">
+    
+    <footer class="container mt-5">
+        <div class="row bg-dark">
             <div class="col-12 col-md">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img"
