--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <!-- /END THE FEATURETTES -->
 
             </div>
-    </main>
+        </main>
     
-    <footer class="container mt-5">
+    <footer class="container-fluid mr-2 pl-2 pt-5 mt-2">
         <div class="row bg-dark">
             <div class="col-12 col-md">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
